result/0619-143834/stderr.log
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/main.c:3:1: error: expected identifier or ‘(’ before ‘if’
    3 | if (strncmp(configuration.command, "dimension", 9) == 0) {
      | ^~
gmake[2]: *** [CMakeFiles/freud.dir/build.make:107: CMakeFiles/freud.dir/src/main.c.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c: In function ‘dimension’:
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:8:12: warning: implicit declaration of function ‘read_image_data’ [-Wimplicit-function-declaration]
    8 |     data = read_image_data(source_path, &width, &height, &channel_count);
      |            ^~~~~~~~~~~~~~~
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:8:10: warning: assignment to ‘unsigned char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
    8 |     data = read_image_data(source_path, &width, &height, &channel_count);
      |          ^
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:10:17: error: ‘NULL’ undeclared (first use in this function)
   10 |     if (data == NULL) {
      |                 ^~~~
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:1:1: note: ‘NULL’ is defined in header ‘<stddef.h>’; did you forget to ‘#include <stddef.h>’?
  +++ |+#include <stddef.h>
    1 | 
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:10:17: note: each undeclared identifier is reported only once for each function it appears in
   10 |     if (data == NULL) {
      |                 ^~~~
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:15:5: warning: implicit declaration of function ‘printf’ [-Wimplicit-function-declaration]
   15 |     printf("dimension: %d, %d\n", width, height);
      |     ^~~~~~
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:1:1: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
  +++ |+#include <stdio.h>
    1 | 
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:15:5: warning: incompatible implicit declaration of built-in function ‘printf’ [-Wbuiltin-declaration-mismatch]
   15 |     printf("dimension: %d, %d\n", width, height);
      |     ^~~~~~
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:15:5: note: include ‘<stdio.h>’ or provide a declaration of ‘printf’
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:18:5: warning: implicit declaration of function ‘free’ [-Wimplicit-function-declaration]
   18 |     free(data);
      |     ^~~~
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:1:1: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
  +++ |+#include <stdlib.h>
    1 | 
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:18:5: warning: incompatible implicit declaration of built-in function ‘free’ [-Wbuiltin-declaration-mismatch]
   18 |     free(data);
      |     ^~~~
/home/runner/work/pgi-2025-the_embellished_springs/pgi-2025-the_embellished_springs/src/features.c:18:5: note: include ‘<stdlib.h>’ or provide a declaration of ‘free’
gmake[2]: *** [CMakeFiles/freud.dir/build.make:93: CMakeFiles/freud.dir/src/features.c.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/freud.dir/all] Error 2
gmake: *** [Makefile:136: all] Error 2

The process '/usr/local/bin/cmake' failed with exit code 2